feat: 调整了目录标题格式

--- a/example.tex
+++ b/example.tex
@@ -13,10 +13,7 @@
     \enabstract{TEST TITLE}{\lipsum[1-3]}
         {Key word, Key word, Key word}
     
-    \thispagestyle{empty}
-    \tableofcontents
-    \setcounter{page}{0}
-    \newpage
+    \PSYtableofcontents
 
     \section{测试章}
     \zhlipsum[1][name=xiangyu]
