fix: 修复了中文摘要的字体

--- a/psythesis.cls
+++ b/psythesis.cls
@@ -96,7 +96,7 @@
         
         \vspace*{15pt}
 
-        {\sffamily\zihao{-3}摘\hspace*{1\ccwd}要}
+        {\sffamily\bfseries\zihao{-3}摘\hspace*{1\ccwd}要}
     \end{center}
     
     #1
