fix: 调整了产生额外空行的公式测试用例

--- a/example.tex
+++ b/example.tex
@@ -24,9 +24,10 @@
     
     \section{其他格式测试章}
     \subsection{测试公式}
-    \zhlipsum[1]
+    行间公式：
     \[
         \varphi(x, y) = pxy
     \]
+    \zhlipsum[1][name=xiangyu]
 
 \end{document}
