--- a/zh-fontset.tex
+++ b/zh-fontset.tex
@@ -1,7 +1,7 @@
 % CJK fonts 中文字体设定
-\setCJKmainfont{方正细雅宋_GBK}[
-    BoldFont = 方正粗雅宋_GBK,
-    ItalicFont = 方正纤雅宋_GBK,
+\setCJKmainfont{思源宋体}[
+    BoldFont = 思源宋体 Bold,
+    ItalicFont = 思源宋体 Light,
 ]
 \setCJKsansfont{思源黑体}
 \setCJKmonofont{思源等宽}
