feat: 添加tikz和列表相关宏包
(cherry picked from commit 3145ff69335f21c4613afa5bf8e4bed1f56dbd8a)

--- a/psythesis.cls
+++ b/psythesis.cls
@@ -159,8 +159,13 @@
     \pagestyle{general}
 }
 
+% Listings 列表
+\RequirePackage{enumerate, enumitem, listings}
+
 % Miscellaneous 杂项
 \RequirePackage{ulem}
 \RequirePackage{graphicx}
 \RequirePackage[svgnames, dvipsnames]{xcolor}
 \RequirePackage[colorlinks, linkcolor=black]{hyperref}
+\RequirePackage{tikz}
+\RequirePackage{float}
