feat: 调整列表与图片标题样式

--- a/psythesis.cls
+++ b/psythesis.cls
@@ -161,6 +161,13 @@
 
 % Listings 列表
 \RequirePackage{enumerate, enumitem, listings}
+\setenumerate[1]{labelsep=0.65em, leftmargin=3.65em, itemsep=2.2pt, topsep=2.5pt}
+\setitemize[1]{itemsep=2.2pt, topsep=2.5pt}
+
+% 图片与表格
+\RequirePackage{caption}
+\captionsetup{labelsep=quad}
+\setlength{\belowcaptionskip}{3pt}
 
 % Miscellaneous 杂项
 \RequirePackage{ulem}
